force-app/main/default/objects/Game_KPI__c/Game_KPI__c.object-meta.xml
<CustomObject>
    <description>Child of Game (BRD 20.1). KPI slab config: qualifier vs coin KPIs, slab cutoff and reward coins.</description>
    <label>Game KPI / Slab</label>
    <nameField>
        <displayFormat>GKPI-{00000}</displayFormat>
        <label>Game KPI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>