force-app/main/default/objects/Game_KPI__c/fields/Battleground_KPI__c.field-meta.xml
<CustomField>
    <fullName>Battleground_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Battleground KPI</label>
    <referenceTo>Battleground_KPI__c</referenceTo>
    <relationshipName>Game_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>