force-app/main/default/objects/Game_KPI__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Discipline</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>