force-app/main/default/objects/Game_KPI__c/fields/Cutoff_Value__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Value__c</fullName>
    <label>Cutoff Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>