force-app/main/default/objects/Game_KPI__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <description>Operator used to compare the user's actual against the slab target when scoring (BRD 20.1 gamification).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At least</fullName>
                <default>true</default>
                <label>At least (&gt;=)</label>
            </value>
            <value>
                <fullName>Greater than</fullName>
                <label>Greater than (&gt;)</label>
            </value>
            <value>
                <fullName>At most</fullName>
                <label>At most (&lt;=)</label>
            </value>
            <value>
                <fullName>Less than</fullName>
                <label>Less than (&lt;)</label>
            </value>
            <value>
                <fullName>Equal to</fullName>
                <label>Equal to (=)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>