force-app/main/default/objects/Game_KPI__c/fields/Is_Continuous__c.field-meta.xml
<CustomField>
    <fullName>Is_Continuous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Continuous</label>
    <type>Checkbox</type>
</CustomField>