force-app/main/default/objects/Game_KPI__c/fields/KPI_Metric__c.field-meta.xml
<CustomField>
    <fullName>KPI_Metric__c</fullName>
    <description>Reuses existing KPI master (KPI_Metric__c).</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Metric</label>
    <referenceTo>KPI_Metric__c</referenceTo>
    <relationshipName>Game_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>