force-app/main/default/objects/Game_KPI__c/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <description>Qualifiers carry no coins (entry criteria); others carry coins (BRD 20.1).</description>
    <label>KPI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>