force-app/main/default/objects/Game_KPI__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <length>40</length>
    <type>Text</type>
</CustomField>