force-app/main/default/objects/Game_KPI__c/fields/Reward_Coins__c.field-meta.xml
<CustomField>
    <fullName>Reward_Coins__c</fullName>
    <label>Reward Coins</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>