force-app/main/default/objects/Game_KPI__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SR</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>DBSM</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>ASE</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>