force-app/main/default/objects/Game_KPI__c/fields/Use_Slabs__c.field-meta.xml
<CustomField>
    <fullName>Use_Slabs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Slabs</label>
    <type>Checkbox</type>
</CustomField>